# poetry-cookiecutter

./: .coveragerc  .pre-commit-config.yaml  README.md  cookiecutter.json  notes.md  pyproject.toml  setup.cfg  template_config.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: test.yml
{{cookiecutter.package_name}}/tests/: test_stub.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
