[tool.poetry]
name = "poetry_cookiecutter"
description = "Cookiecutter for setting up python projects with poetry that just work"
authors = ["Jonathon Vandezande"]
license = "MIT"
readme = "README.md"
version = "0.2.0"
keywords = ["cookiecutter", "poetry"]
repository = "https://github.com/jevandezande/poetry-cookiecutter"

[tool.poetry.dependencies]
python = ">=3.11"
cookiecutter = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = ">=0.1.3"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.ruff]
exclude = ["\\{\\{cookiecutter.package_name\\}\\}"]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]

[tool.mypy]
files = ["hooks"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["hooks"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
