[tool.poetry]
name = "poetry_cookiecutter"
description = "Cookiecutter for setting up python projects with poetry that just work"
authors = ["Jonathon Vandezande"]
license = "MIT"
readme = "README.md"
version = "0.5.0"
keywords = ["cookiecutter", "poetry"]
repository = "https://github.com/jevandezande/poetry-cookiecutter"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
cookiecutter = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pre-commit = "*"
ruff = ">=0.5"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.ruff]
extend-exclude = ["\\{\\{cookiecutter.package_name\\}\\}"]
line-length = 100

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
exclude = "\\{\\{cookiecutter.package_name\\}\\}"
files = ["hooks"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["hooks"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
